Fix timeline tooltips fall offscreen when centred
Not the best fix since it looks nicer centred, but simplest and easiest
to maintain fix.

--- a/src/css/_BRsearch.scss
+++ b/src/css/_BRsearch.scss
@@ -9,8 +9,7 @@
   display: none;
   position: absolute;
   bottom: calc(100% + 5px);
-  left: 50%;
-  transform: translateX(-50%);
+  left: -14px;
   width: 350px;
   max-width: 100vw;
   padding: 12px 14px;
@@ -34,9 +33,7 @@
     position: absolute;
     content: "";
     bottom: -9px;
-    left: 50%;
-    margin-left: -1px;
-    transform: translateX(-50%);
+    left: 0;
     width: 30px;
     height: 10px;
     clip-path: polygon(0 0, 100% 0, 50% 100%);
@@ -131,9 +128,10 @@
     main {
       @include ellipsis-lines(4);
       margin-bottom: 6px;
+      &:before { content: "“"; }
+      &:after { content: "”"; }
     }
     footer {
-      text-align: center;
       font-size: 0.85em;
       opacity: .8;
     }
